# DeepClaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.ja.md  README.md  README.zh-CN.md  agent-ui.py  components.json  create_essay.js  electron-builder.yml  electron.vite.config.ts  main.py  package.json  pnpm-lock.yaml  pyproject.toml  refrence.md  send_wechat_message.py  skills-lock.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.web.tsbuildinfo
.claude/agents/: code-reviewer.md
agent-runtime/: index.js
books/agent-rl-roadmap/: outline.md
books/claude-code/: references.md
books/coding-puzzles/: question1.md  question2.md  solve1.py  solve2.py  solve3.cpp  solve4.cpp
books/self-envolve/: README.md
docs/: Harness design for long-running application development.md  audio-transcript.md  cron-internals.md  memory.md  practice.md
examples/: agent10.py  agent11.py  agent13.py  agent14.py  agent7.py  agent8.py  agent9.py  constants.py  hook.py  permissions.py  utils.py  validator.py
examples/compact/: auto_compact.py  micro_compact.py  prompt.py
examples/tools/: BashTool.py  SubagentTool.py  __init__.py  task_tools.py
src/main/: index.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/scripts/: pre-install.ps1  pre-install.sh
src/shared/: constants.ts  logging.ts  models.ts  types.ts
tests/: test_cli_startup.py  test_compact.py  test_helpers.py  test_shell.py  test_web.py
winclaw/: __init__.py
winclaw/agent/: __init__.py  compact.py  context.py  loop.py  memory.py  skills.py  subagent.py
(+192 files in other folders)
