[project]
name = "winclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pywinauto>=0.6.9",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
